--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				<li><a href="#">WORK</a></li>
 				<li><a href="#">TEAM</a></li>
 				<li><a href="#">CONTACT</a></li>
+				<li><a href="ski/index.html">Second Site</a></li>
 
 			</ul>
 		</div>
